2000-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/gdyntext/gdyntext_ui.c
	* plug-ins/gdyntext/message_window.c: set gimp_help accelerator
	on main window and use gimp_dialog_set_icon () on all windows.

2000-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: check if drawable returned
	by gimp_drawable_get() is valid. In a lot of cases this prevents
	the plug-in from crashing if the user closes the associated 
	image (as described in bug report #20979).

2000-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/gdyntext/README
	* plug-ins/gdyntext/gdyntext.[ch]: updated to version 1.5.2

2000-08-15  Michael Natterer  <mitch@gimp.org>

	* app/app_procs.c
	* app/gimprc.c
	* app/module_db.c
	* app/plug_in.c: s/if(be_verbose || no_splash)/if(be_verbose)/g

	Changed because nobody on #gimp could explain why "no_splash"
	should imply "be_verbose".

2000-08-15  Michael Natterer  <mitch@gimp.org>

	* plug-ins/print/*
	* po-plug-ins/POTFILES.in: updated to the current CVS version
	from sourceforge (something after 4.0a1).

2000-08-14  Daniel Egger  <egger@suse.de>

	* app/menus.c: Added missing tearoff_delete_cb prototype.

2000-08-10  Kevin Turner  <acapnotic@users.sourceforge.net>

	* tools/pdbgen/enumcode-py.pl:
	* plug-ins/pygimp/gimpenums.py: gimpenums.py is now autogenerated by
	enumcode-py.pl

	* plug-ins/pygimp/gimpfu.py: 
	* plug-ins/pygimp/gimpmodule.c: renaming fixes for libgimp 1.2

	* plug-ins/pygimp/plug-ins/pdbbrowse.py (pars): s/PARAM_/PDB_/

2000-08-09  Kevin Turner  <acapnotic@users.sourceforge.net>

	* plug-ins/pygimp/gimpmodule.c (chn_getattr): under "layer",
	remove the call to gimp_channel_get_layer_id() as this function
	does not exist.  It would be well for someone who knows pygimp
	better than I to review this change, but it keeps pygimp from
	being *completely* broken.

2000-08-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfli/gfli.c: removed double install_procedure for 
	fli_load.
