@@ -1,41 +1,49 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN" 
+"http://www.w3.org/TR/REC-html40/loose.dtd">
+
 <HTML>
 <HEAD>
   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
   <TITLE>The Standard Gimp Color Selector</TITLE>
 </HEAD>
-<BODY text="#000000" bgcolor="#FFFFFF" link="#0000FF" vlink="#FF0000" alink="#000088">
-<TABLE width="100%" cellspacing="1" cellpadding="1">
-  <TR bgcolor="black">
-    <TD width="100%" align="center"><FONT size="+2" color="white">The Standard
-      Gimp Color Selector</FONT></TD>
-  </TR>
-  <TR bgcolor="white" >
-    <TD width="100%" align="left"><P>
-      <P>
-      You can change the color manually, by clicking on a hue in the spectrum color
-      field to the right, and then dragging the cross in the large color box on
-      the left to the exact color you want.
-      <P>
-      If you want a specific RGB or HSV color, you can type the exact value in
-      the HSV or RGB parameter fields, or you can drag the sliders to specify a
-      color.
-      <P>
-      The H (Hue) channel is displayed in the color fields by default when you
-      open the Color Selection dialog. However, you can choose to search in another
-      channels for the color you want. It can be very useful to change the channel
-      to S(saturation) or V(value) when you searching for a specific color. The
-      color spectrum will be displayed in a quite different way by doing this and
-      you might find it useful.
-      <P>
-      In the bottom of the dialog you will find the current color specified as
-      a Hex Triplet. The function is targeting Web developers and to get the color
-      code into your HTML code simply select it and paste it in with your middle
-      mouse button. In Windows you must use Ctrl-C and Ctrl-V to achieve the same
-      result.
-      <P>
-      <A href="index.html">Index</A>
-    </TD>
-  </TR>
-</TABLE>
-</BODY></HTML>
+<BODY text="#000000" bgcolor="#FFFFFF" link="#0000FF" vlink="#FF0000"
+alink="#000088">
+
+<H1>
+The Standard Gimp Color Selector
+</H1>
+
+<P>
+You can change the color manually by clicking on a hue in the spectrum color
+field to the right, and then dragging the cross in the large color box on
+the left to the exact color you want.  If you want a specific RGB
+(Red, Green, Blue) or HSV (Hue, Saturation,
+Value) color, type the exact value in
+the HSV or RGB parameter fields or drag the sliders to specify a
+color.
+</P>
+      
+<P>
+The H (hue) channel is displayed in the color fields by default when you
+open the Color Selection dialog. However, you can choose to search in another
+channel for the color you want. It can be very useful to change the channel
+to S (saturation) or V (value) when you're searching for a specific color. The
+color spectrum will be displayed in a quite different way by doing this and
+you might find it more useful.
+</P>
+      
+<P>
+In the bottom of the dialog you will find the current color specified as
+a hexedecimal triplet. The function is targeted at Web developers - to
+get the color
+code into your HTML document simply select it and paste it in with your middle
+mouse button. In Windows you must use Ctrl-C and Ctrl-V to achieve the same
+result.
+</P>
+
+<P>
+<A href="index.html">Index</A>
+</P>
+
+</BODY>
+</HTML>
