@@ -1,32 +1,34 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+
 <HTML>
 <HEAD>
-  <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+  <META http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <TITLE>The GTK Color Selector</TITLE>
 </HEAD>
 <BODY text="#000000" bgcolor="#FFFFFF" link="#0000FF" vlink="#FF0000" alink="#000088">
-<TABLE width="100%" cellspacing="1" cellpadding="1">
-  <TR bgcolor="black">
-    <TD width="100%" align="center"><FONT size="+2" color="white">The GTK Color
-      Selector</FONT></TD>
-  </TR>
-  <TR bgcolor="white" >
-    <TD width="100%" align="left"><P>
-      <P>
-      The GTK color selector is similar to <A HREF="built_in.html">Gimp's standard
-      color</A> selector. The main difference is that you can't select which color
-      space that you want to work with in. The left Color bar is always working
-      in value mode and you will alter the hue and saturation by dragging your
-      mouse in the circle.
-      <P>
-      An other difference is that the RGB values are represented in percent instead
-      of values from 0 to 255. 100% (1.0) is 255 and 0% (0.0) is 0, depending how
-      you work with colors this maybe a advantage or just cumbersome. The fact
-      is that you should see it as the amount of e.g Red that you want to mix into
-      your color.
-      <P>
-      <A href="index.html">Index</A>
-    </TD>
-  </TR>
-</TABLE>
-</BODY></HTML>
+
+<H1>
+The GTK Color Selector
+</H1>
+
+<P>
+The GTK color selector is similar to <A href="built_in.html">Gimp's standard
+color</A> selector. The main difference is that you can't select in which color
+space you want to work. The left color bar is always working
+in value mode and you can alter the hue and saturation by dragging your
+mouse in the circle.
+</P>
+
+<P>
+Another difference is that the RGB values are represented in percent instead
+of values from 0 to 255. 100% (1.0) is 255 and 0% (0.0) is 0.   The fact
+is that you should see it as the amount of e.g. red that you want to mix into
+your color.
+</P>
+
+<P>
+<A href="index.html">Index</A>
+</P>
+
+</BODY>
+</HTML>
