@@ -1,35 +1,23 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
-<html>
-<head>
-  <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
-  <title>Index for color_selectors</title>
-</head>
+<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 
-<body text="#000000" bgcolor="#FFFFFF" link="#0000FF"
-      vlink="#FF0000" alink="#000088">
+<HTML>
 
-  <table width="100%" cellspacing="1" cellpadding="1">
-    <tr bgcolor="black">
-      <td width="100%" align="center">
-        <font size="+2" color="white">color_selectors Index</font>
-      </td>
-    </tr>  
-    <tr bgcolor="white" >
-      <td width="100%" align="left">
-	<p>
-	(/dialogs/color_selectors/index.html)<p>
-          <a href="../index.html">Top index</a><p>
-          <p>Topics in this directory:<p>
-          <a href="built_in.html">built_in</a><br>
-          <a href="gtk.html">gtk</a><br>
-          <a href="triangle.html">triangle</a><br>
-          <a href="watercolor.html">watercolor</a><br>
-	<p>
-	/Karin & Olof
-	<p>
-      </td>
-    </tr>
-  </table>
+<!-- This file is auto-generated by makeindex.sh. Please do not edit by hand. -->
 
-</body>
-</html>
+<HEAD>
+  <META http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <TITLE>Index for color selectors</TITLE>
+</HEAD>
+
+<BODY text="#000000" bgcolor="#FFFFFF" link="#0000FF" vlink="#FF0000" alink="#000088">
+
+<H1>color selectors Index</H1>
+
+<P><A href="../index.html">Top index</A></P>
+<P>Topics in this directory:</P>
+<A href="built_in.html">built&nbsp;in</A><br>
+<A href="gtk.html">gtk</A><br>
+<A href="triangle.html">triangle</A><br>
+<A href="watercolor.html">watercolor</A><br>
+</BODY>
+</HTML>
