@@ -1,27 +1,28 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN"
+"http://www.w3.org/TR/REC-html40/loose.dtd">
+
 <HTML>
 <HEAD>
   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
   <TITLE>The Triangle Color Selector</TITLE>
 </HEAD>
 <BODY text="#000000" bgcolor="#FFFFFF" link="#0000FF" vlink="#FF0000" alink="#000088">
-<TABLE width="100%" cellspacing="1" cellpadding="1">
-  <TR bgcolor="black">
-    <TD width="100%" align="center"><FONT size="+2" color="white">The Triangle
-      Color Selector</FONT></TD>
-  </TR>
-  <TR bgcolor="white" >
-    <TD width="100%" align="left"><P>
-      <P>
-      The triangle color selector is one of the best colors selectors in Gimp.
-      This is due to the fact that it visualize hue, value and saturation
-      simultaneously. You control the hue by dragging the triangle around in the
-      outer circle color scale. When you have selected you base color you simply
-      alter the value and saturation by pressing and dragging inside the triangle
-      color scale.
-      <P>
-      <A href="index.html">Index</A>
-    </TD>
-  </TR>
-</TABLE>
-</BODY></HTML>
+
+<H1>
+The Triangle Color Selector
+</H1>
+
+<P>
+The triangle color selector is one of the best color selectors in GIMP.
+This is due to the fact that it allows you to visualize hue, value and
+saturation simultaneously. You control the hue by dragging the
+triangle around in the outer circle. When you have
+selected your base color, you simply alter the value and saturation by
+pressing and dragging inside the triangle color scale.
+
+<P>
+<A href="index.html">Index</A>
+</P>
+
+</BODY>
+</HTML>
