@@ -1,35 +1,41 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+
 <HTML>
 <HEAD>
   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
-  <TITLE>The Watercolor Color Select</TITLE>
+  <TITLE>The Watercolor Color Selector</TITLE>
 </HEAD>
 <BODY text="#000000" bgcolor="#FFFFFF" link="#0000FF" vlink="#FF0000" alink="#000088">
-<TABLE width="100%" cellspacing="1" cellpadding="1">
-  <TR bgcolor="black">
-    <TD width="100%" align="center"><FONT size="+2" color="white">The Watercolor
-      Color Select</FONT></TD>
-  </TR>
-  <TR bgcolor="white" >
-    <TD width="100%" align="left"><P>
-      <P>
-      This color selector resembles the little water cup you use for blending colors
-      when you're making a watercolor painting.
-      <P>
-      If you want to mix a color, simply move the mouse over the color scale while
-      pressing the left mouse button. If the color get to dark you just press the
-      right mouse button to fade the color. You can also set the pressure which
-      you collect the colors with. Setting a low pressure and you have to drag
-      more to get a dark highly saturated color, on the other hand you will have
-      a better control of your mixing.
-      <P>
-      You can save ten colors in the dialog. If you want to save a color that you
-      have mixed just press new and the color will end up in the color array. Remember
-      that you can only save ten colors, if you all ready have ten colors and save
-      a new color the oldest one will be erased.
-      <P>
-      <A href="index.html">Index</A>
-    </TD>
-  </TR>
-</TABLE>
-</BODY></HTML>
+
+<H1>
+The Watercolor Color Selector
+</H1>
+
+<P>
+This color selector resembles the little water cup you use for
+blending colors when you're making a watercolor painting.
+</P>
+
+<P>
+If you want to mix a color, simply move the mouse over the color scale
+while pressing the left mouse button. If the color gets too dark you
+just press the right mouse button to fade the color. You can also set
+the pressure with which you collect the colors. Setting a low pressure
+means you have to drag more to get a dark, highly saturated color, but
+gives better control over the mixing.
+</P>
+
+<P>
+You can save ten colors in the dialog. If you want to save a color
+that you have mixed, just press new and the color will appear in the
+color array. Remember that you can only save ten colors.  If you
+already have ten colors and save a new color, the oldest one will be
+replaced.
+</P>
+
+<P>
+<A href="index.html">Index</A>
+</P>
+
+</BODY>
+</HTML>
